fix overflow bug

--- a/src/components/MainScreen/mainScreen.css
+++ b/src/components/MainScreen/mainScreen.css
@@ -6,6 +6,7 @@
   height: 860px;
   position: relative;
   background-color: #192226;
+  overflow: hidden;
 }
 
 /* Small devices (phones, 480px and down) */
